--- a/utilities/mogrify.1.in
+++ b/utilities/mogrify.1.in
@@ -270,10 +270,11 @@ Image Operators:
 Image Sequence Operators:
   \-affinity filename   transform image colors to match this set of colors
   \-append              append an image sequence top to botto (use +append for left to right)
-  \-compare             mathematically and visually annotate the difference between an image and its reconstruction
   \-clut                apply a color lookup table to the image
   \-coalesce            merge a sequence of images
   \-combine             combine a sequence of images
+  \-compare             mathematically and visually annotate the difference between an image and its reconstruction
+  \-complex operator    perform complex mathematics on an image sequence
   \-composite           composite image
   \-crop geometry       cut out a rectangular region of the image
   \-deconstruct         break down an image sequence into constituent parts
